# aq-swe-take-home

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  render.yaml
.github/workflows/: ci.yml
backend/: alembic.ini  app.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20241204_0001_initial.py  20241204_0002_submission_snapshots.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/routes/: executions.py  problems.py  submissions.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  entities.py
backend/app/schemas/: execution.py  problem.py  submission.py  test_case.py
backend/app/services/: executor.py
backend/tests/services/: test_executor.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: system-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  types.ts
scripts/: seed_data.py
shared/types/: README.md
